[gd_scene load_steps=42 format=3 uid="uid://c7ripghigdapa"]

[ext_resource type="Script" uid="uid://c7njo7tqrdbxs" path="res://src/ui/creature_detail_view/creature_detail_view_ui.gd" id="1_ilim5"]
[ext_resource type="Texture2D" uid="uid://5gkbw1il0h43" path="res://src/ui/creature_detail_view/textures/detail_view_bg.png" id="2_bi2st"]
[ext_resource type="Texture2D" uid="uid://bequvq4qou4sg" path="res://assets/textures/brown_photostudio_02_1k.png" id="3_afveu"]
[ext_resource type="Script" uid="uid://63umrodfd2l3" path="res://src/entities/creatures/creature_data.gd" id="4_tqbuu"]
[ext_resource type="FontFile" uid="uid://cywugphcmumyo" path="res://assets/fonts/RedHatDisplay-Medium.ttf" id="5_bhvwm"]
[ext_resource type="Script" uid="uid://bexncqsnblklf" path="res://src/ui/creature_detail_view/creature_live_camera.gd" id="6_q5ua7"]
[ext_resource type="FontFile" uid="uid://fo3a5urwshvs" path="res://assets/fonts/RedHatDisplay-Bold.ttf" id="6_tqbuu"]
[ext_resource type="PackedScene" uid="uid://dpv4hgst1vgd2" path="res://src/ui/scene_preview_subviewport_container.tscn" id="7_6c18d"]
[ext_resource type="Texture2D" uid="uid://bnq3ckykvimm7" path="res://src/ui/creature_detail_view/textures/pen-to-square-solid2.png" id="7_awlyl"]
[ext_resource type="Texture2D" uid="uid://ews4jtogbrap" path="res://src/ui/creature_detail_view/textures/accessories_button.png" id="9_awlyl"]
[ext_resource type="FontFile" uid="uid://byvf0xnc7iud3" path="res://assets/fonts/RedHatDisplay-LightItalic.ttf" id="10_n2nre"]
[ext_resource type="Texture2D" uid="uid://dhmtypxwl6woc" path="res://src/ui/creature_detail_view/textures/add_to_tank_button.png" id="10_wb7er"]
[ext_resource type="Texture2D" uid="uid://d1a862tjlxnsk" path="res://src/ui/creature_detail_view/textures/remove_from_tank_button.png" id="11_mcnp6"]
[ext_resource type="FontFile" uid="uid://dfedpbfhlg2px" path="res://assets/fonts/RedHatDisplay-Regular.ttf" id="11_ux5o3"]
[ext_resource type="PackedScene" uid="uid://dofxw2he0twfr" path="res://src/ui/creature_detail_view/stat_container.tscn" id="12_bi2st"]
[ext_resource type="Texture2D" uid="uid://u1vfmqxiknnw" path="res://src/ui/creature_detail_view/textures/close_button.png" id="12_n2nre"]
[ext_resource type="PackedScene" uid="uid://dbs3nvaelgmko" path="res://src/ui/creature_detail_view/need_container.tscn" id="13_afveu"]
[ext_resource type="Texture2D" uid="uid://b2efb171e25j3" path="res://src/ui/creature_detail_view/textures/creature_card_money_icon.png" id="16_tqbuu"]
[ext_resource type="Texture2D" uid="uid://bu8uf1ndrsqpo" path="res://src/ui/creature_detail_view/textures/preference_graph_bg.png" id="16_ux5o3"]
[ext_resource type="PackedScene" uid="uid://v18arrb0fcx2" path="res://src/ui/curve_visualizer/curve_visualizer_UI.tscn" id="17_1h6la"]
[ext_resource type="Texture2D" uid="uid://bmt1cliweybg" path="res://src/ui/creature_detail_view/textures/HappyFace.png" id="19_q5ua7"]
[ext_resource type="Texture2D" uid="uid://bemcnpvc5k4jd" path="res://src/ui/creature_detail_view/textures/SadFace.png" id="20_6c18d"]
[ext_resource type="Texture2D" uid="uid://bvayslct02ivn" path="res://src/ui/creature_detail_view/textures/Sell.png" id="26_6c18d"]

[sub_resource type="Curve" id="Curve_awlyl"]

[sub_resource type="Curve" id="Curve_wb7er"]

[sub_resource type="Resource" id="Resource_mcnp6"]
script = ExtResource("4_tqbuu")
creature_name = "tEST"
creature_species = "SPECIES"
creature_type = 0
creature_description = "A creature with no creature_description"
creature_rarity = 4
creature_image = ExtResource("3_afveu")
creature_scene_uuid = ""
creature_tint = Color(1, 1, 1, 1)
creature_tint_amount = 1.0
creature_size = 1.0
creature_money_per_hour = 1.0
creature_hunger_rate = 1.0
creature_satiation = 1.0
creature_speed = 1.0
creature_light_preference = SubResource("Curve_awlyl")
creature_temperature_preference = SubResource("Curve_wb7er")
creature_id = ""
creature_luck = 1.0
creature_is_in_tank = false
creature_position = Vector3(0, 0, 0)
creature_age = 0.0
creature_age_bracket = 1
creature_happiness_bracket = 2
creature_hunger_bracket = 2
creature_light_contentment = 1.0
creature_temperature_contentment = 1.0
creature_happiness = 1.0
metadata/_custom_type_script = "uid://63umrodfd2l3"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6c18d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_couks"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_485np"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b5g87"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3gqis"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_odb5o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_phm73"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mb82t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iw5k5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yb2yq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vqfvv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1h6la"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6j02r"]
bg_color = Color(0.650128, 0.650128, 0.650128, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_klxi3"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q5ua7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
anti_aliasing = false

[node name="CreatureDetailViewUI" type="Control" node_paths=PackedStringArray("_accessory_equip_menu_button", "_rarity_and_type_label", "_name_button", "_name_rename_button", "_description_label", "_species_label", "_image", "_sell_button", "_sell_price_label", "_age_label", "_add_to_tank_button", "_money_per_hour_container", "_hunger_rate_container", "_speed_container", "_size_container", "_happiness_container", "_satiation_container", "_close_button", "_brightness_graph", "_temperature_graph", "_creature_live_camera", "_creature_live_camera_subviewport_container", "_creature_live_subviewport_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ilim5")
creature_data = SubResource("Resource_mcnp6")
_accessory_equip_menu_button = NodePath("BG/Header/Buttons/AccessoriesButton")
_rarity_and_type_label = NodePath("BG/Header/BasicInfoMargins/BasicInfoVBox/RarityAndType")
_name_button = NodePath("BG/Header/BasicInfoMargins/BasicInfoVBox/NameContainer/MarginContainer/NameButton")
_name_rename_button = NodePath("BG/Header/BasicInfoMargins/BasicInfoVBox/NameContainer/RenameButton")
_description_label = NodePath("BG/Description")
_species_label = NodePath("BG/CreatureSpecies")
_image = NodePath("BG/Preview/Panel2/CreatureImage")
_sell_button = NodePath("BG/MarginContainer/TextureButton")
_sell_price_label = NodePath("BG/HBoxContainer3/SellValue")
_age_label = NodePath("BG/Header/BasicInfoMargins/BasicInfoVBox/AgeLabel")
_add_to_tank_button = NodePath("BG/Header/Buttons/AddRemoveFromTankButton")
_money_per_hour_container = NodePath("BG/HBoxContainer2/Stats/StatContainer")
_hunger_rate_container = NodePath("BG/HBoxContainer2/Stats/StatContainer2")
_speed_container = NodePath("BG/HBoxContainer2/Stats/StatContainer3")
_size_container = NodePath("BG/HBoxContainer2/Stats/StatContainer4")
_happiness_container = NodePath("BG/HBoxContainer2/Needs/NeedContainer")
_satiation_container = NodePath("BG/HBoxContainer2/Needs/NeedContainer2")
_close_button = NodePath("BG/Header/Buttons/CloseButton")
_brightness_graph = NodePath("BG/HBoxContainer2/Preferences/Brightness/MarginContainer/Panel/MarginContainer/Panel/CurveVisualizerUI")
_temperature_graph = NodePath("BG/HBoxContainer2/Preferences/Temperature/MarginContainer/Panel/MarginContainer/Panel/CurveVisualizerUI")
_creature_live_camera = NodePath("BG/Preview/Panel2/LivePreview/SubViewport/Camera3D")
_creature_live_camera_subviewport_container = NodePath("BG/Preview/Panel2/LivePreview")
_creature_live_subviewport_container = NodePath("BG/Preview/Panel2/ScenePreviewSubviewportContainer")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 600.0
texture = ExtResource("2_bi2st")

[node name="Header" type="MarginContainer" parent="BG"]
layout_mode = 0
offset_right = 1024.0
offset_bottom = 121.0
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 0

[node name="BasicInfoMargins" type="MarginContainer" parent="BG/Header"]
layout_mode = 2
size_flags_horizontal = 0

[node name="BasicInfoVBox" type="VBoxContainer" parent="BG/Header/BasicInfoMargins"]
layout_mode = 2

[node name="RarityAndType" type="Label" parent="BG/Header/BasicInfoMargins/BasicInfoVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.211765, 0.364706, 0.45098, 1)
theme_override_fonts/font = ExtResource("5_bhvwm")
theme_override_font_sizes/font_size = 15
text = "Common Fish"

[node name="NameContainer" type="HBoxContainer" parent="BG/Header/BasicInfoMargins/BasicInfoVBox"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BG/Header/BasicInfoMargins/BasicInfoVBox/NameContainer"]
layout_mode = 2

[node name="NameButton" type="Button" parent="BG/Header/BasicInfoMargins/BasicInfoVBox/NameContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0.635294, 0.992157, 1)
theme_override_colors/font_hover_color = Color(0, 0.635294, 0.992157, 1)
theme_override_colors/font_color = Color(0.231373, 0.380392, 0.462745, 1)
theme_override_colors/font_focus_color = Color(0, 0.635294, 0.992157, 1)
theme_override_colors/font_pressed_color = Color(0, 0.635294, 0.992157, 1)
theme_override_fonts/font = ExtResource("6_tqbuu")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_6c18d")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_couks")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_485np")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_b5g87")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_3gqis")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_odb5o")
theme_override_styles/hover = SubResource("StyleBoxEmpty_phm73")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mb82t")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_iw5k5")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_yb2yq")
theme_override_styles/normal = SubResource("StyleBoxEmpty_vqfvv")
text = "Name"

[node name="RenameButton" type="TextureButton" parent="BG/Header/BasicInfoMargins/BasicInfoVBox/NameContainer"]
layout_mode = 2
texture_normal = ExtResource("7_awlyl")

[node name="AgeLabel" type="Label" parent="BG/Header/BasicInfoMargins/BasicInfoVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.211765, 0.364706, 0.45098, 1)
theme_override_fonts/font = ExtResource("11_ux5o3")
theme_override_font_sizes/font_size = 15
text = "Age:"

[node name="Buttons" type="HBoxContainer" parent="BG/Header"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
theme_override_constants/separation = 25

[node name="AccessoriesButton" type="TextureButton" parent="BG/Header/Buttons"]
layout_mode = 2
texture_normal = ExtResource("9_awlyl")

[node name="AddRemoveFromTankButton" type="TextureButton" parent="BG/Header/Buttons"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("10_wb7er")
texture_pressed = ExtResource("11_mcnp6")

[node name="CloseButton" type="TextureButton" parent="BG/Header/Buttons"]
layout_mode = 2
texture_normal = ExtResource("12_n2nre")

[node name="HBoxContainer" type="HBoxContainer" parent="BG"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -254.0
offset_bottom = 98.0
grow_horizontal = 0
mouse_filter = 2

[node name="Preview" type="Panel" parent="BG"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -450.0
offset_top = 118.0
offset_right = -104.0
offset_bottom = 314.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1h6la")

[node name="Panel2" type="Panel" parent="BG/Preview"]
clip_children = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6j02r")

[node name="CreatureImage" type="TextureRect" parent="BG/Preview/Panel2"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 5
stretch_mode = 6

[node name="LivePreview" type="SubViewportContainer" parent="BG/Preview/Panel2"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="BG/Preview/Panel2/LivePreview"]
handle_input_locally = false
size = Vector2i(346, 196)
render_target_update_mode = 0

[node name="Camera3D" type="Camera3D" parent="BG/Preview/Panel2/LivePreview/SubViewport"]
cull_mask = 1048569
fov = 60.0
script = ExtResource("6_q5ua7")

[node name="ScenePreviewSubviewportContainer" parent="BG/Preview/Panel2" instance=ExtResource("7_6c18d")]
layout_mode = 1
camera_angle = Vector3(0.21, -33.039, 40.57)
camera_zoom = 0.515
camera_fov = 35.0
drag_enabled = true
continuous_update = true

[node name="CreatureSpecies" type="Label" parent="BG"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.0
offset_top = 116.0
offset_right = 92.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.211765, 0.364706, 0.45098, 1)
theme_override_fonts/font = ExtResource("10_n2nre")
theme_override_font_sizes/font_size = 15
text = "Carassius auratus"

[node name="Description" type="Label" parent="BG"]
layout_mode = 0
offset_left = 450.0
offset_top = 145.0
offset_right = 928.0
offset_bottom = 326.0
theme_override_colors/font_color = Color(0.211765, 0.364706, 0.45098, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("11_ux5o3")
theme_override_font_sizes/font_size = 15
text = "The common goldfish is an agreeable looking fish that brings joy and laughter to the hearts of many. They are simultaneously very smart and blissfully ignorant. Their best are aquatic soccer and basketball players, while their worst prefer to be vegetables."
autowrap_mode = 3
text_overrun_behavior = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="BG"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -264.0
offset_right = -64.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 0

[node name="Stats" type="VBoxContainer" parent="BG/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Stats" type="Label" parent="BG/HBoxContainer2/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(0.211765, 0.364706, 0.45098, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("6_tqbuu")
theme_override_font_sizes/font_size = 15
text = "Stats"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="StatContainer" parent="BG/HBoxContainer2/Stats" instance=ExtResource("12_bi2st")]
layout_mode = 2

[node name="StatContainer2" parent="BG/HBoxContainer2/Stats" instance=ExtResource("12_bi2st")]
layout_mode = 2

[node name="StatContainer3" parent="BG/HBoxContainer2/Stats" instance=ExtResource("12_bi2st")]
layout_mode = 2

[node name="StatContainer4" parent="BG/HBoxContainer2/Stats" instance=ExtResource("12_bi2st")]
layout_mode = 2

[node name="Needs" type="VBoxContainer" parent="BG/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Needs" type="Label" parent="BG/HBoxContainer2/Needs"]
layout_mode = 2
theme_override_colors/font_color = Color(0.211765, 0.364706, 0.45098, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("6_tqbuu")
theme_override_font_sizes/font_size = 15
text = "Needs"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="NeedContainer" parent="BG/HBoxContainer2/Needs" instance=ExtResource("13_afveu")]
layout_mode = 2

[node name="NeedContainer2" parent="BG/HBoxContainer2/Needs" instance=ExtResource("13_afveu")]
layout_mode = 2

[node name="Preferences" type="VBoxContainer" parent="BG/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Preferences" type="Label" parent="BG/HBoxContainer2/Preferences"]
layout_mode = 2
theme_override_colors/font_color = Color(0.211765, 0.364706, 0.45098, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("6_tqbuu")
theme_override_font_sizes/font_size = 15
text = "Preferences"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Temperature" type="TextureRect" parent="BG/HBoxContainer2/Preferences"]
layout_mode = 2
texture = ExtResource("16_ux5o3")

[node name="Label" type="Label" parent="BG/HBoxContainer2/Preferences/Temperature"]
layout_mode = 2
offset_left = 5.0
offset_top = 1.0
offset_right = 123.0
offset_bottom = 24.0
theme_override_colors/font_color = Color(0.211765, 0.364706, 0.45098, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("6_tqbuu")
theme_override_font_sizes/font_size = 15
text = "Temperature"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="MarginContainer" type="MarginContainer" parent="BG/HBoxContainer2/Preferences/Temperature"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 29
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 13

[node name="Panel" type="Panel" parent="BG/HBoxContainer2/Preferences/Temperature/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_klxi3")

[node name="MarginContainer" type="MarginContainer" parent="BG/HBoxContainer2/Preferences/Temperature/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Panel" type="Panel" parent="BG/HBoxContainer2/Preferences/Temperature/MarginContainer/Panel/MarginContainer"]
clip_children = 2
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q5ua7")

[node name="CurveVisualizerUI" parent="BG/HBoxContainer2/Preferences/Temperature/MarginContainer/Panel/MarginContainer/Panel" instance=ExtResource("17_1h6la")]
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0
top_left_color = Color(0.952941, 0.819608, 0.137255, 1)
top_right_color = Color(0, 0.635294, 0.992157, 1)
bottom_left_color = Color(0.952941, 0.819608, 0.137255, 1)
bottom_right_color = Color(0, 0.635294, 0.992157, 1)
graph_margins = Vector2(2, 2)

[node name="MarginContainer" type="MarginContainer" parent="BG/HBoxContainer2/Preferences/Temperature/MarginContainer/Panel/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Control" type="Control" parent="BG/HBoxContainer2/Preferences/Temperature/MarginContainer/Panel/MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="BG/HBoxContainer2/Preferences/Temperature/MarginContainer/Panel/MarginContainer/Panel/MarginContainer/Control"]
layout_mode = 2
offset_right = 12.0
offset_bottom = 12.0
texture = ExtResource("19_q5ua7")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="BG/HBoxContainer2/Preferences/Temperature/MarginContainer/Panel/MarginContainer/Panel/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -12.0
offset_right = 12.0
grow_vertical = 0
texture = ExtResource("20_6c18d")
expand_mode = 1
stretch_mode = 5

[node name="Brightness" type="TextureRect" parent="BG/HBoxContainer2/Preferences"]
layout_mode = 2
texture = ExtResource("16_ux5o3")

[node name="Label" type="Label" parent="BG/HBoxContainer2/Preferences/Brightness"]
layout_mode = 2
offset_left = 5.0
offset_top = 1.0
offset_right = 123.0
offset_bottom = 24.0
theme_override_colors/font_color = Color(0.211765, 0.364706, 0.45098, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("6_tqbuu")
theme_override_font_sizes/font_size = 15
text = "Brightness"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="MarginContainer" type="MarginContainer" parent="BG/HBoxContainer2/Preferences/Brightness"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 29
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 13

[node name="Panel" type="Panel" parent="BG/HBoxContainer2/Preferences/Brightness/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_klxi3")

[node name="MarginContainer" type="MarginContainer" parent="BG/HBoxContainer2/Preferences/Brightness/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Panel" type="Panel" parent="BG/HBoxContainer2/Preferences/Brightness/MarginContainer/Panel/MarginContainer"]
clip_children = 2
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q5ua7")

[node name="CurveVisualizerUI" parent="BG/HBoxContainer2/Preferences/Brightness/MarginContainer/Panel/MarginContainer/Panel" instance=ExtResource("17_1h6la")]
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0
top_left_color = Color(0.0470588, 0.231373, 0.333333, 1)
top_right_color = Color(0.415686, 0.788235, 0.996078, 1)
bottom_left_color = Color(0.0470588, 0.231373, 0.333333, 1)
bottom_right_color = Color(0.415686, 0.788235, 0.996078, 1)
graph_margins = Vector2(2, 2)

[node name="MarginContainer" type="MarginContainer" parent="BG/HBoxContainer2/Preferences/Brightness/MarginContainer/Panel/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Control" type="Control" parent="BG/HBoxContainer2/Preferences/Brightness/MarginContainer/Panel/MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="BG/HBoxContainer2/Preferences/Brightness/MarginContainer/Panel/MarginContainer/Panel/MarginContainer/Control"]
layout_mode = 2
offset_right = 12.0
offset_bottom = 12.0
texture = ExtResource("19_q5ua7")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="BG/HBoxContainer2/Preferences/Brightness/MarginContainer/Panel/MarginContainer/Panel/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -12.0
offset_right = 12.0
grow_vertical = 0
texture = ExtResource("20_6c18d")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer3" type="HBoxContainer" parent="BG"]
layout_mode = 0
offset_left = -565.0
offset_top = 540.0
offset_right = 459.0
offset_bottom = 580.0
theme_override_constants/separation = 15
alignment = 2

[node name="Value" type="Label" parent="BG/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.211765, 0.364706, 0.45098, 1)
theme_override_fonts/font = ExtResource("6_tqbuu")
theme_override_font_sizes/font_size = 20
text = "Value"

[node name="TextureRect2" type="TextureRect" parent="BG/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("16_tqbuu")

[node name="SellValue" type="Label" parent="BG/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.211765, 0.364706, 0.45098, 1)
theme_override_fonts/font = ExtResource("6_tqbuu")
theme_override_font_sizes/font_size = 20
text = "9999"

[node name="MarginContainer" type="MarginContainer" parent="BG"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.0
offset_top = -60.0
offset_right = 33.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 20

[node name="TextureButton" type="TextureButton" parent="BG/MarginContainer"]
layout_mode = 2
texture_normal = ExtResource("26_6c18d")
